--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
     "nodemon": "^2.0.21",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
