--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^4.11.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-oauth2-jwt-bearer": "^1.3.0"
+    "express-oauth2-jwt-bearer": "^1.3.0",
+    "jwt-decode": "^3.1.2"
   }
 }
