--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "cors": "^2.8.5",
