--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "meetingapi",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
     "node": "16.17"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "nodemon --exec ts-node server.ts"
+    "dev": "nodemon --exec ts-node server.ts",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
