--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "nodemon --exec ts-node server.ts",
+    "dev": "nodemon --exec ts-node index.ts",
     "start": "node index.js"
   },
   "keywords": [],
