--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,17 +3,17 @@ on:
   push:
     branches:
       - master
-      
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        
+
       - name: Generate deployment package
         run: zip -r ../deploy.zip . -x '*.git*'
-        
+
       - name: Beanstalk Deploy for app
         uses: einaregilsson/beanstalk-deploy@v11
         with:
@@ -21,8 +21,9 @@ jobs:
           aws_secret_key: ${{secrets.AWS_SECRET_KEY}}
           application_name: meeting-app
           environment_name: Meetingapp-env
+          version_label: "verxxxx"
           region: ap-northeast-1
           deployment_package: ../deploy.zip
-          
+
       - name: AWS Deployed!
         run: echo App deployed to ELB
