--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,19 @@ jobs:
       - name: Generate deployment package
         run: zip -r ../deploy.zip . -x '*.git*'
 
+      - name: Get timestamp
+        uses: gerred/actions/current-time@master
+        id: current-time
+
+      - name: Run string replace
+        uses: frabert/replace-string-action@master
+        id: format-time
+        with:
+          pattern: '&#91;:\.]+'
+          string: "${{ steps.current-time.outputs.time }}"
+          replace-with: "-"
+          flags: "g"
+
       - name: Beanstalk Deploy for app
         uses: einaregilsson/beanstalk-deploy@v11
         with:
