--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           aws_secret_key: ${{secrets.AWS_SECRET_KEY}}
           application_name: meeting-app
           environment_name: Meetingapp-env
-          version_label: "verxxxx"
+          version_label: "batch-ver-${{ steps.format-time.outputs.replaced }}"
           region: ap-northeast-1
           deployment_package: ../deploy.zip
 
