--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,19 +14,6 @@ jobs:
       - name: Generate deployment package
         run: zip -r ../deploy.zip . -x '*.git*'
 
-      - name: Get timestamp
-        uses: gerred/actions/current-time@master
-        id: current-time
-
-      - name: Run string replace
-        uses: frabert/replace-string-action@master
-        id: format-time
-        with:
-          pattern: '&#91;:\.]+'
-          string: "${{ steps.current-time.outputs.time }}"
-          replace-with: "-"
-          flags: "g"
-
       - name: Beanstalk Deploy for app
         uses: einaregilsson/beanstalk-deploy@v11
         with:
@@ -34,7 +21,7 @@ jobs:
           aws_secret_key: ${{secrets.AWS_SECRET_KEY}}
           application_name: meeting-app
           environment_name: Meetingapp-env
-          version_label: "batch-ver-${{ steps.format-time.outputs.replaced }}"
+          version_label: "ver123123"
           region: ap-northeast-1
           deployment_package: ../deploy.zip
 
