--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Generate deployment package
         run: zip -r ../deploy.zip . -x '*.git*'
 
+      - name: Set unique version number
+        run: echo "VERSION=$(git rev-parse HEAD | cut -c 1-8)" >> $GITHUB_ENV
+
       - name: Beanstalk Deploy for app
         uses: einaregilsson/beanstalk-deploy@v11
         with:
@@ -21,7 +24,7 @@ jobs:
           aws_secret_key: ${{secrets.AWS_SECRET_KEY}}
           application_name: meeting-app
           environment_name: Meetingapp-env
-          version_label: "ver123123"
+          version_label: "$VERSION"
           region: ap-northeast-1
           deployment_package: ../deploy.zip
 
