--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           aws_secret_key: ${{secrets.AWS_SECRET_KEY}}
           application_name: meeting-app
           environment_name: Meetingapp-env
-          version_label: "$VERSION"
+          version_label: ${{VERSION}}
           region: ap-northeast-1
           deployment_package: ../deploy.zip
 
