--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate deployment package
-        run: zip -r ../deploy.zip . -x '*.git*'
+        run: zip -r ../deploy.zip ./dist -x '*.git*'
 
       - name: Set unique version number
         run: echo "VERSION=$(git rev-parse HEAD | cut -c 1-8)" >> $GITHUB_ENV
@@ -24,7 +24,7 @@ jobs:
           aws_secret_key: ${{secrets.AWS_SECRET_KEY}}
           application_name: meeting-app
           environment_name: Meetingapp-env
-          version_label: "testversion"
+          version_label: "1.0.0"
           region: ap-northeast-1
           deployment_package: ../deploy.zip
 
