--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "nodemon --exec ts-node index.ts",
-    "start": "node dist/index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
