--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate deployment package
-        run: zip -r ../deploy.zip ./dist -x '*.git*'
+        run: zip -r ../deploy.zip . -x '*.git*'
 
       - name: Set unique version number
         run: echo "VERSION=$(git rev-parse HEAD | cut -c 1-8)" >> $GITHUB_ENV
