--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-oauth2-jwt-bearer": "^1.3.0",
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "^3.1.2",
+    "node-cache": "^5.1.2"
   }
 }
