--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
+    "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^2.0.21",
     "prisma": "^4.11.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
