--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
+    "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^2.0.21",
     "prisma": "^4.11.0",
